# vp-mteval

./: .buildinfo  .gitignore  Dockerfile  Dockerfile.cpumetrics  Dockerfile.dev  README.md  cpumetrics.supervisord.conf  docker-compose.dev.yml  docker-compose.yml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: app.doctree  auth.doctree  config.doctree  events.doctree  hooks.doctree  index.doctree  models.doctree  ngrams.doctree  routes.doctree  services.doctree  tasks.doctree  utils.doctree
.doctrees/usage/: index.doctree  installation.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/server/: app.html  auth.html  config.html  hooks.html  models.html  ngrams.html  ngrams_sql.html  routes.html  services.html  (+2 more)
api/: app.html  auth.html  config.html  events.html  hooks.html  index.html  models.html  ngrams.html  routes.html  services.html  tasks.html  utils.html
examples/: explore.ipynb
mteval-upload/: example.json  pyproject.toml
mteval-upload/src/mteval_upload/: __init__.py  lib.py  main.py
mteval_upload/: README.md  pyproject.toml
pgadmin/: servers.json
server/: .dockerignore  autobuild_docs_dev.sh  components.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
server/data/: README.md  translation_runs.json
server/docs/: conf.py  index.rst
server/docs/api/: app.rst  hooks.rst  index.rst  models.rst
server/docs/usage/: index.rst
server/resources/: api.ts  auth.tsx  datasets.tsx  main.tsx  namespaces.ts  routeTree.gen.ts  runs.tsx  styles.css
server/resources/components/: PageHeading.tsx  column-selector.tsx  mode-toggle.tsx  pending-component.tsx  refresh-bar.tsx  theme-provider.tsx  typography.jsx  virtualized-json.tsx
server/resources/components/ui/: README.md  data-table-column-header.tsx
server/resources/lib/: utils.ts
server/resources/routes/: __root.tsx  index.tsx  login.tsx  logout.tsx
server/resources/routes/_auth/: route.tsx  settings.tsx
server/resources/routes/_auth/datasets/: $datasetId.tsx  index.tsx
server/resources/routes/_auth/namespaces/: $namespaceId.tsx  index.tsx  route.tsx
server/resources/routes/_auth/namespaces/$namespaceId/: index.tsx
server/resources/routes/_auth/namespaces/$namespaceId/datasets/: $datasetId.tsx  index.tsx
server/resources/routes/_auth/namespaces/$namespaceId/datasets/$datasetId/: compare.tsx  index.tsx
server/resources/routes/_auth/namespaces/$namespaceId/datasets/$datasetId/runs/: $runId.tsx  index.tsx  route.tsx
server/resources/routes/_auth/namespaces/$namespaceId/runs/: $runId.tsx  index.tsx  route.tsx
server/resources/routes/_auth/runs/: $runId.tsx  index.tsx
server/resources/routes/_auth/users/: $userId.tsx
server/resources/routes/datasets/: $datasetId.tsx  index.tsx
server/resources/routes/namespaces/: $namespaceId.tsx  index.tsx
server/resources/routes/runs/: $runId.tsx  index.tsx
server/server/: app.py  auth.py  cli.py  config.py  events.py  hooks.py  models.py  ngrams.py  ngrams_sql.py  plugins.py  services.py  tasks.py  upload.py  utils.py
server/server/routes/: __init__.py  auth.py  worker.py
server/server/routes/worker/: __init__.py
server/templates/: index.html.j2
tool/: README.md  import_wandb.py  import_wmt.py
usage/: index.html  installation.html
worker/: README.md  main.py  pyproject.toml  test_main.py
worker/processors/: __init__.py  bleu.py  chrf.py  comet.py  custom.py  example_custom.py  metricx24.py  metricx24_impl.py  protocols.py
worker/src/mteval_worker/: main.py
worker/src/mteval_worker/processors/: __init__.py  bleu.py  chrf.py  comet.py  custom.py  metricx24.py  protocols.py
worker/tests/: test_main.py
worker/user_metrics/: bleu.py  gemma3_dspy_v1.1.py  gemma3_dspy_v1.json  gemma3_dspy_v1.py
(+12 files in other folders)
