[project]
name = "mteval_upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
]

[project.scripts]
mteval_upload = "mteval_upload.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
