[project]
name = "server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Miroslav Hrabal", email = "mhn@email.cz"},
]
dependencies = ["litestar[attrs,brotli,pydantic,sqlalchemy,standard]>=2.14.0", "ruff>=0.9.10", "python-iso639>=2025.2.18", "structlog>=25.3.0", "starlette-admin-litestar-plugin>=0.3.1", "psycopg[binary,pool]>=3.2.7", "json-canonical>=2.0.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = false

