[project]
name = "server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Miroslav Hrabal", email = "mhn@email.cz"},
]
dependencies = ["litestar[attrs,brotli,pydantic,sqlalchemy,standard,structlog,jwt]>=2.14.0", "ruff>=0.9.10", "python-iso639>=2025.2.18", "structlog>=25.3.0", "starlette-admin-litestar-plugin>=0.3.1", "psycopg[binary,pool]>=3.2.7", "json-canonical>=2.0.0", "litestar-vite>=0.13.2", "nodeenv>=1.9.1", "typed-settings>=24.6.0", "litestar-saq>=0.5.3", "regex>=2024.11.6", "passlib>=1.7.4", "argon2-cffi>=25.1.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = false


[dependency-groups]
dev = [
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-toolbox>=4.0.0",
    "sphinx-design>=0.6.1",
    "sphinx-click>=6.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "shibuya>=2025.4.25",
]
