[project]
name = "mteval-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "anyio>=4.9.0",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "tenacity>=9.1.2",
]

[dependency-groups]
cpu = ["sacrebleu>=2.5.1"]
gpu = [
    "datasets>=3.6.0",
    "joblib>=1.5.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "unbabel-comet>=2.2.6",
]
llm = [
    "dspy==3.0.0b2",
 "iso639>=0.1.4",
 "openai>=1.93.0",
]

[project.scripts]
mteval-worker = "mteval_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
